# langchain-python-demo

./: pyproject.toml
agents_tools/: agent_basics.py
chains/: branching_chain.py  extended_chain.py  parallel_chain.py  simple_chain.py
chat_models/: chat_model.py
data/: queries.txt  story.txt  story2.txt
practice-projects/: details-extractor.py  travel-agent.py
prompt_templates/: conversation_prompt_template.py  simple_prompt_template.py
rag/: rag_basics.py
summarization/: summarization-chains.py
