[project]
name = "demo-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.4.1",
    "langchain[google-genai,openai]>=1.0.5",
    "langgraph>=1.0.3",
    "pypdf>=6.3.0",
]
